--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,7 +20,7 @@ const posts = _posts.sort((a, b) => b.data.published.valueOf() - a.data.publishe
     <section class="mt-8">
       <ul data-searched-posts class="grid gap-6 sm:grid-cols-2 sm:gap-10 lg:grid-cols-3"></ul>
       <!-- prettier-ignore -->
-      <ul class="grid gap-6 sm:grid-cols-2 sm:gap-10 lg:grid-cols-3">
+      <ul data-static-posts class="grid gap-6 sm:grid-cols-2 sm:gap-10 lg:grid-cols-3">
         {posts.map((post) => (<li><PostCard {post} /></li>))}
       </ul>
     </section>
