--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -37,6 +37,10 @@ const topics = [...new Set(_posts.flatMap((post) => post.data.topics))].sort();
           <ul data-static-posts class="flex flex-col">
             {posts.map((post) => <li><PostLine {post} /></li>)}
           </ul>
+          <div data-no-posts-found class="mt-6 hidden text-center">
+            <h2 class="text-base font-bold tracking-wider">No Posts Found</h2>
+            <p class="text-xs text-2">No posts matched the search criteria.</p>
+          </div>
         </div>
       </section>
       <section class="flex flex-col gap-6">
@@ -59,8 +63,9 @@ const topics = [...new Set(_posts.flatMap((post) => post.data.topics))].sort();
   document.addEventListener('astro:page-load', async () => {
     const staticPosts = document.querySelector('[data-static-posts]') as HTMLUListElement;
     const searchedPosts = document.querySelector('[data-searched-posts]') as HTMLUListElement;
+    const noPostsFound = document.querySelector('[data-no-posts-found]') as HTMLDivElement;
     const totalPostViews = document.querySelector('[data-total-post-views]') as HTMLSpanElement;
-    if (!staticPosts || !searchedPosts || !totalPostViews) return;
+    if (!staticPosts || !searchedPosts || !noPostsFound || !totalPostViews) return;
 
     fetch('/blog/api').then(async (res) => (totalPostViews.innerText = await res.text()));
 
@@ -68,11 +73,20 @@ const topics = [...new Set(_posts.flatMap((post) => post.data.topics))].sort();
 
     document.addEventListener('post-filter', async (e) => {
       const { search, topics } = (e as FilterEvent).detail;
-      const { results } = (await pagefind.search(search, { filters: { topics } })) as Search;
+      const filters = { topics: { any: topics } };
+      const { results } = (await pagefind.search(search, { filters })) as Search;
 
-      staticPosts.classList.toggle('hidden', !!results.length);
-      searchedPosts.classList.toggle('hidden', !results.length);
       searchedPosts.innerHTML = '';
+
+      if (results.length) {
+        staticPosts.classList.add('hidden');
+        searchedPosts.classList.remove('hidden');
+        noPostsFound.classList.add('hidden');
+      } else {
+        searchedPosts.classList.add('hidden');
+        if (search.length || topics.length) noPostsFound.classList.remove('hidden');
+        else staticPosts.classList.remove('hidden');
+      }
 
       for (const result of results) {
         const { raw_url, meta } = await result.data();
