--- a/src/components/post-line.astro
+++ b/src/components/post-line.astro
@@ -15,7 +15,8 @@ const { remarkPluginFrontmatter } = await post.render();
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
   class={twJoin(
-    'group flex items-center justify-between gap-2 rounded py-2 text-xs',
+    'group flex flex-col rounded py-2 text-xs',
+    'sm:flex-row sm:items-center sm:justify-between sm:gap-2',
     'focus-visible:outline-none focus-visible:ring-1',
   )}
 >
@@ -26,6 +27,7 @@ const { remarkPluginFrontmatter } = await post.render();
     <Dot class="shrink-0" size={14} aria-hidden />
     <span>{remarkPluginFrontmatter.readingTime} Min Read</span>
   </div>
+  <Separator class="mt-4 sm:hidden" />
 </a>
 
 <script>
@@ -39,7 +41,7 @@ const { remarkPluginFrontmatter } = await post.render();
         <a
           href="${post.url.replace(/\/$/, '')}"
           aria-label="${`${post.title}. ${post.description}`}"
-          class="group flex items-center justify-between gap-2 rounded py-2 text-xs focus-visible:outline-none focus-visible:ring-1"
+          class="group flex flex-col rounded py-2 text-xs sm:flex-row sm:items-center sm:justify-between sm:gap-2 focus-visible:outline-none focus-visible:ring-1"
         >
           <span class="group-hover:text-emphasis motion-safe:transition-colors">${post.title}</span>
           <div class="flex-1 h-px bg-3 rounded"></div>
@@ -48,6 +50,7 @@ const { remarkPluginFrontmatter } = await post.render();
             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12.1" cy="12.1" r="1"/></svg>
             <span>${post.readingTime}</span>
           </div>
+          <div class="mt-4 h-px bg-3 rounded sm:hidden"></div>
         </a>
       `;
       }
