--- a/src/components/project-card.astro
+++ b/src/components/project-card.astro
@@ -12,12 +12,12 @@ const repo = await octokit.repos
 ---
 
 <div class="h-full rounded border">
-  <div class="flex items-center gap-2 rounded-t border-b bg-2 px-2 py-1">
+  <div class="flex items-center gap-2 rounded-t border-b bg-2 px-2 py-1 text-xs">
     <Book class="shrink-0 text-2" size={12} aria-hidden />
     <span>{repo.name}</span>
   </div>
   <div class="flex flex-col gap-3 p-3 text-2">
-    <p class="text-xs text-2">{repo.description}</p>
+    <p class="text-xxs text-2">{repo.description}</p>
     <Separator />
     <div class="flex items-center justify-between gap-2 text-xxs">
       <div class="flex items-center gap-3">
