--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -10,6 +10,7 @@ import { Dot } from 'lucide-astro';
 const _posts = await getCollection('posts');
 const posts = _posts.sort((a, b) => b.data.published.valueOf() - a.data.published.valueOf());
 const topics = [...new Set(_posts.flatMap((post) => post.data.topics))].sort();
+const pagefindURL = import.meta.env.PAGEFIND_URL;
 ---
 
 <Layout title="Blog | Christian Penrod">
@@ -53,46 +54,38 @@ const topics = [...new Set(_posts.flatMap((post) => post.data.topics))].sort();
   </div>
 </Layout>
 
-<script>
-  import type { CollectionEntry } from 'astro:content';
+<script define:vars={{ pagefindURL }}>
+document.addEventListener('astro:page-load', async () => {
+  const staticPosts = document.querySelector('[data-static-posts]');
+  const searchedPosts = document.querySelector('[data-searched-posts]');
+  const noPostsFound = document.querySelector('[data-no-posts-found]');
+  const totalPostViews = document.querySelector('[data-total-post-views]');
+  if (!staticPosts || !searchedPosts || !noPostsFound || !totalPostViews) return;
 
-  type Data = { raw_url: string; meta: CollectionEntry<'posts'>['data'] & { readingTime: string } };
-  type Search = { results: Array<{ data: () => Promise<Data> }> };
-  type FilterEvent = CustomEvent<{ search: string; topics: Array<string> }>;
+  fetch('/blog/api').then(async (res) => (totalPostViews.innerText = await res.text()));
 
-  document.addEventListener('astro:page-load', async () => {
-    const staticPosts = document.querySelector('[data-static-posts]') as HTMLUListElement;
-    const searchedPosts = document.querySelector('[data-searched-posts]') as HTMLUListElement;
-    const noPostsFound = document.querySelector('[data-no-posts-found]') as HTMLDivElement;
-    const totalPostViews = document.querySelector('[data-total-post-views]') as HTMLSpanElement;
-    if (!staticPosts || !searchedPosts || !noPostsFound || !totalPostViews) return;
+  const pagefind = await import(pagefindURL);
 
-    fetch('/blog/api').then(async (res) => (totalPostViews.innerText = await res.text()));
+  document.addEventListener('post-filter', async ({ detail: { search, topics } }) => {
+    const { results } = await pagefind.search(search, { filters: { topics: { any: topics } } });
 
-    const pagefind = await import('.vercel/output/static/pagefind/pagefind');
+    searchedPosts.innerHTML = '';
 
-    document.addEventListener('post-filter', async (e) => {
-      const { search, topics } = (e as FilterEvent).detail;
-      const filters = { topics: { any: topics } };
-      const { results } = (await pagefind.search(search, { filters })) as Search;
+    if (results.length) {
+      staticPosts.classList.add('hidden');
+      searchedPosts.classList.remove('hidden');
+      noPostsFound.classList.add('hidden');
+    } else {
+      searchedPosts.classList.add('hidden');
+      if (search.length || topics.length) noPostsFound.classList.remove('hidden');
+      else staticPosts.classList.remove('hidden');
+    }
 
-      searchedPosts.innerHTML = '';
-
-      if (results.length) {
-        staticPosts.classList.add('hidden');
-        searchedPosts.classList.remove('hidden');
-        noPostsFound.classList.add('hidden');
-      } else {
-        searchedPosts.classList.add('hidden');
-        if (search.length || topics.length) noPostsFound.classList.remove('hidden');
-        else staticPosts.classList.remove('hidden');
-      }
-
-      for (const result of results) {
-        const { raw_url, meta } = await result.data();
-        const post = encodeURIComponent(JSON.stringify({ ...meta, url: raw_url }));
-        searchedPosts.innerHTML += `<li><post-line data-post="${post}"/></li>`;
-      }
-    });
+    for (const result of results) {
+      const { raw_url, meta } = await result.data();
+      const post = encodeURIComponent(JSON.stringify({ ...meta, url: raw_url }));
+      searchedPosts.innerHTML += `<li><post-line data-post="${post}"/></li>`;
+    }
   });
+});
 </script>
