--- a/src/components/post-views.astro
+++ b/src/components/post-views.astro
@@ -13,10 +13,8 @@ const { slug } = Astro.props;
 </div>
 
 <script define:vars={{ slug }}>
-  fetch('/blog/api', { method: 'PUT', body: JSON.stringify({ slug }) })
-    .then((res) => res.json())
-    .then((views) => {
-      const el = document.querySelector(`[data-post-views="${slug}"]`);
-      el.textContent = views.toString().padStart(6, '0');
-    });
+fetch('/blog/api', { method: 'PUT', body: JSON.stringify({ slug }) }).then(async (res) => {
+  const el = document.querySelector(`[data-post-views="${slug}"]`);
+  el.textContent = (await res.text())?.toString().padStart(6, '0');
+});
 </script>
