--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -29,7 +29,7 @@ type Post = CollectionEntry<'posts'>;
 type Props = { post: Post; prev: Post; next: Post };
 
 const { post, prev, next } = Astro.props;
-const { remarkPluginFrontmatter, headings, Content } = await post.render();
+const { remarkPluginFrontmatter: extras, headings, Content } = await post.render();
 ---
 
 <Layout
@@ -38,23 +38,23 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
   og={`open-graph/src/content/posts/${post.slug}.png`}
 >
   <div class="mx-auto mt-fluid-5 max-w-screen-lg xl:grid xl:grid-cols-[1fr,17rem] xl:gap-16">
-    <article class="mx-auto max-w-prose">
-      <div class="flex flex-col gap-3">
+    <article data-pagefind-body class="mx-auto max-w-prose">
+      <div class="flex flex-col gap-3" data-pagefind-meta={`description:${post.data.description}`}>
         <h1 class="text-lg font-bold uppercase tracking-widest">{post.data.title}</h1>
         <div class="flex flex-wrap items-center gap-4 text-xxs text-2">
           <div class="flex items-center gap-2 rounded border bg-2 px-2">
             <Calendar class="shrink-0" size={14} aria-hidden />
-            <Moment>{post.data.published}</Moment>
+            <Moment data-pagefind-meta="published">{post.data.published}</Moment>
           </div>
           <div class="flex items-center gap-2 rounded border bg-2 px-2">
             <Clock4 class="shrink-0" size={14} aria-hidden />
-            <span>{remarkPluginFrontmatter.readingTime} Min Read</span>
+            <span data-pagefind-meta="readingTime">{extras.readingTime} Min Read</span>
           </div>
           <PostViews slug={post.slug} />
         </div>
       </div>
       <Separator class="mb-4 mt-6 xl:mb-10" />
-      <div class="block xl:hidden">
+      <div data-pagefind-ignore class="block xl:hidden">
         <details>
           <summary class="text-xs tracking-wider">TABLE OF CONTENTS</summary>
           <!-- prettier-ignore -->
@@ -70,7 +70,7 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
         {post.data.repo && <PostGithub repo={post.data.repo} />}
       </div>
       <Separator class="mb-16 mt-10" />
-      <div class="flex flex-col gap-4">
+      <div data-pagefind-ignore class="flex flex-col gap-4">
         <h3 class="font-bold tracking-widest">MORE POSTS</h3>
         <div class="grid gap-x-10 gap-y-6 md:grid-cols-2">
           <PostCard post={prev} />
@@ -79,6 +79,9 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
       </div>
     </article>
     <h2 id="introduction" class="sr-only"></h2>
+    <ul class="hidden">
+      {post.data.topics.map((topic) => <ul data-pagefind-filter="topics">{topic}</ul>)}
+    </ul>
     <aside class="sticky top-10 hidden h-max rounded border xl:block">
       <div class="flex flex-col gap-4 border-b p-4">
         <h2 class="text-xs tracking-wider">TABLE OF CONTENTS</h2>
